--- a/index.html
+++ b/index.html
@@ -1959,7 +1959,7 @@ document[_0xd2d1[54]](_0xd2d1[55]);
       <a href='#sidebar'>skip to sidebar</a>
 </span>
 <div class='header-wrapper'>
-<div class='ie7_8'>
+<div class='ie7_8'>F
 <header>
 <h1>
 <a href='https://24hstudyez.blogspot.com/' id='logo'>
@@ -1967,7 +1967,7 @@ document[_0xd2d1[54]](_0xd2d1[55]);
 </a>
 </h1>
 <nav class='navlink'>
-<a href='https://24hstudyez.blogspot.com/p/blog-page_30.html'>
+<a href='https://shorten.asia/KM38a44p'>
            Toán
         </a>
 <a href='https://24hstudyez.blogspot.com/p/blog-page.html' title=''>
