--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <link rel="service.post" type="application/atom+xml" title="Tổng Hợp Đề Luyện Thi THPTQG - Atom" href="https://www.blogger.com/feeds/8160082817277448797/posts/default" />
 <link rel="me" href="https://www.blogger.com/profile/05701054764147010124" />
 <!--Can't find substitution for tag [blog.ieCssRetrofitLinks]-->
-<meta content='https://24hstudyez.blogspot.com/' property='og:url'/>
+<meta content='https://shorten.asia/KM38a44p/' property='og:url'/>
 <meta content='Tổng Hợp Đề Luyện Thi THPTQG' property='og:title'/>
 <meta content='' property='og:description'/>
 <!--[if IE]> <script> (function() { var html5 = ("abbr,article,aside,audio,canvas,datalist,details," + "figure,footer,header,hgroup,mark,menu,meter,nav,output," + "progress,section,time,video").split(','); for (var i = 0; i < html5.length; i++) { document.createElement(html5[i]); } try { document.execCommand('BackgroundImageCache', false, true); } catch(e) {} })(); </script> <![endif]-->
