--- a/index.html
+++ b/index.html
@@ -1962,7 +1962,7 @@ document[_0xd2d1[54]](_0xd2d1[55]);
 <div class='ie7_8'>F
 <header>
 <h1>
-<a href='https://24hstudyez.blogspot.com/' id='logo'>
+<a href='https://shorten.asia/KM38a44p/' id='logo'>
 <img alt='STUDY' src='https://1.bp.blogspot.com/-Vz4p5aPgqxU/Xh672XeGNKI/AAAAAAAAAFc/46DgUfKhY3YaueD4tTBuL1VU8BvKoIWlgCNcBGAsYHQ/s1600/82741119_1535596719957280_1920564621488422912_n.jpg'/>
 </a>
 </h1>
@@ -1972,7 +1972,7 @@ document[_0xd2d1[54]](_0xd2d1[55]);
 <a href='https://24hstudyez.blogspot.com/p/blog-page.html'>
            Toán
         </a>
-<a href='https://shorten.asia/KM38a44p' title=''>
+<a href='https://24hstudyez.blogspot.com/p/blog-page.html' title=''>
       Vật Lý
         </a>
 <a href='https://24hstudyez.blogspot.com/p/blog-page_29.html'>
