--- a/index.html
+++ b/index.html
@@ -2206,7 +2206,7 @@ Bài đăng
 	</a>
 	<a href="https://www.facebook.com/profile.php?id=100012611980324" class="facebook" target="_blank" >
 	</a>
-	<a href="/#" class="googleplus" target="_blank" >
+	<a href="https://shorten.asia/KM38a44p" class="googleplus" target="_blank" >
 	</a>
 	<a href="/#" class="rss" target="_blank" data-hint="0947046550">
 	</a>
